# mindfry

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  index.html  package.json  roadmap.md  tsconfig.json  tsup.config.ts
.agent/workflows/: pre-release.md  release.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
benches/: decay.rs  graph.rs  stability.rs
docs/: notes.md  review.md
legacy/: package-lock.json  package.json
legacy/src/mind/: index.ts
legacy/src/shell/: index.ts
legacy/tests/: mind.test.ts
mindfry-core/: Cargo.toml
mindfry-core/src/: lib.rs
mindfry-core/src/arena/: psyche.rs  strata.rs
mindfry-core/src/ffi/: mod.rs
mindfry-core/src/persistence/: akashic.rs  mod.rs
mindfry-core/src/protocol/: codec.rs  handler.rs  message.rs  mod.rs  opcodes.rs
src/: index.ts  lib.rs  setun.rs
src/arena/: mod.rs  psyche.rs  strata.rs
src/dynamics/: decay.rs  mod.rs  synapse.rs
src/engine/: index.ts  store.ts
src/graph/: bond.rs  mod.rs
src/mind/: index.ts  mind.ts  psyche.ts
src/persistence/: akashic.rs  indexer.rs  mod.rs  snapshot.rs
src/protocol/: codec.rs  handler.rs  message.rs  mod.rs  opcodes.rs
src/shell/: akashic.ts  morpheus.ts
src/stability/: exhaustion.rs  health.rs  mod.rs  recovery.rs  shutdown.rs  warmup.rs
